force-app/main/default/objects/ICS_AVM_Chat_Session_Detail__c/ICS_AVM_Chat_Session_Detail__c.object-meta.xml
<CustomObject>
    <label>AVM Chat Session Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>AVM Chat Session Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AVM Chat Session Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>