force-app/main/default/objects/ICS_AVM_Chat_Session_Detail__c/fields/ICS_AVM_AffinityToken__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_AffinityToken__c</fullName>
    <label>AffinityToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>