force-app/main/default/objects/ICS_AVM_Chat_Session_Detail__c/fields/ICS_AVM_ConversationUUID__c.field-meta.xml
<CustomField>
    <fullName>ICS_AVM_ConversationUUID__c</fullName>
    <externalId>true</externalId>
    <label>ICS_AVM_ConversationUUID__c</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>